--- a/style.css
+++ b/style.css
@@ -5,10 +5,13 @@ body{
     align-items: center;
     flex-direction: column;
 }
-#welcome{
+#welcome, #game-page{
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 15px;
     background: rgba(101, 101, 156, 0.203);
     width: 350px;
-    min-height: 150px;
+    min-height: 500px;
     box-shadow: 0px 0px 15px;
     border-radius: 5px;
 }
@@ -26,7 +29,7 @@ section{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: larger;   
 }
-#welcome button{
+button{
     width: 110px;
     height: 40px;
     font-size: larger;
@@ -37,7 +40,39 @@ section{
     text-align: center;
 
 }
-#welcome button:hover{
+button:hover{
     background-color: rgba(73, 26, 85, 0.322);
     color: black;
+}
+.click:focus{
+    background-color: black;
+    outline: none;
+}
+#header{
+    display: flex;
+    justify-content: space-between;
+}
+section div h1{
+    background-color: rgba(240, 240, 247, 0.488);
+    color: rgb(108, 35, 127);;
+    min-width: 160px;
+    text-align: center;
+    border-radius: 30px;
+}
+#options{
+    display: flex;
+    flex-direction: column;
+}
+#last-page{
+    display: none;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 15px;
+    background: rgba(101, 101, 156, 0.203);
+    width: 350px;
+    min-height: 500px;
+    box-shadow: 0px 0px 15px;
+    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
 }
